<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <org.rajawali3d.surface.RajawaliSurfaceView
        android:id="@+id/gl_main_surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/debug_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_adf"/>

            <TextView
                android:id="@+id/load_adf_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learning_mode"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/learning_mode_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/adf_uuid_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relocalization_status"/>

            <TextView
                android:id="@+id/relocalization_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_pose_got"/>

            <TextView
                android:id="@+id/device_pose_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/top_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/start_scan"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/start_scan"
                android:visibility="gone"
                android:onClick="startScanClicked"/>
            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/mark_point"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/mark_point"
                android:layout_toRightOf="@+id/start_scan"
                android:onClick="markPointClicked"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/clear_points"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/clear_points"
                android:layout_toRightOf="@+id/mark_point"
                android:onClick="clearPointsClicked"/>

            <ToggleButton
                android:id="@+id/mark_deleted_points"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textOff="@string/stop_to_mark_deleted_points"
                android:textOn="@string/start_to_mark_deleted_points"
                android:textSize="15sp"
                android:layout_toRightOf="@+id/clear_points"
                android:onClick="markDeletedPointsClicked"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_buttons">

            <ToggleButton
                android:id="@+id/delete_point_mode"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textOff="@string/stop_to_delete_point"
                android:textOn="@string/start_to_delete_point"
                android:onClick="deletePointModeClicked"/>
            <ToggleButton
                android:id="@+id/mark_filled_points"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textOff="@string/stop_to_mark_filled_points"
                android:textOn="@string/start_to_mark_filled_points"
                android:layout_toRightOf="@+id/delete_point_mode"
                android:onClick="markfilledPointsClicked"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/auto_filled__points"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/auto_filled_points"
                android:layout_toRightOf="@+id/mark_filled_points"
                android:onClick="autoFilledPointsClicked"/>

        </RelativeLayout>

    </RelativeLayout>

    <trendmicro.com.tangoindoornavigation.ui.custom.MapView
        android:id="@+id/map_view"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>