<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/cancel"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ok"
        android:layout_alignBottom="@+id/ok"
        android:layout_toRightOf="@+id/ok"
        android:text="@string/cancel" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:selectAllOnFocus="true" >
    </EditText>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/type"
        android:textColor="@android:color/black"
        android:layout_below="@+id/name"
        android:layout_width="200dp"
        android:layout_height="wrap_content">

    </android.support.v7.widget.AppCompatSpinner>

    <Button
        android:id="@+id/ok"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/type"
        android:text="@string/ok" />

</RelativeLayout>
